<resources>
    <string name="app_name">Esports Talk</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="post_type">Post Type</string>
    <string name="add_image">Add Image</string>
    <string name="new_post">New Post</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
    <string name="youtube_link">Youtube Link</string>
    <string name="user">User</string>
    <string name="comment_temp">Comment</string>
    <string name="posts">Posts</string>
    <string name="communities">Communities</string>
    <string name="users">Users</string>
    <string name="search">Search</string>
    <string name="followed">Followed</string>
    <string name="all">All</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="loading">Loading...</string>
    <string name="follow">Follow</string>
    <string name="searchResult">Result</string>
    <string name="date">Date</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="auto">Auto</string>
    <string name="viewmode">View Mode</string>
    <string name="comments">Comments</string>
</resources>